[project]
name = "smart-intersection-safety"
version = "0.1.0"
description = "OpenEnv traffic congestion simulation environment"
authors = [
  { name = "Meenakshi" }
]
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "numpy",
  "openai"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
