[project]
name = "smart-intersection-safety"
version = "0.1.0"
description = "OpenEnv traffic congestion simulation environment"
authors = [
  { name = "Meenakshi" }
]
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "numpy",
  "openai",
  "openenv>=0.1.13"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
